[gui] fix hw info CPU name multiple lines + overflowting grom column #bugfix

--- a/gui/css/sysinfo.less
+++ b/gui/css/sysinfo.less
@@ -27,18 +27,19 @@
 	.label, .value {
 		font-size: 20px;
 		display: inline-block;
-		line-height:125%;
+		line-height:105%;
 	}
 
 	.label {
 		width:30%;
 		text-align:right;
-		 vertical-align: top;
+		vertical-align: top;
 	}
 
 	.value {
 		padding-left:10px;
-		word-wrap: nowrap;
+		white-space: nowrap;
+		overflow:hidden;
 	}
 
 	.block-thin, .block-wide {
